# MedLFRM

./: .gitignore  CMakeLists.txt  README.md
Results/: overall_res_Kinship.txt
Results/Kinship/K50_nu10_phi50_c1_1.00_c2_16.00/: 000.nu  000.nuexpprod  000.phi  000.w0  000.w1  000.ydist  1.nu  1.nuexpprod  1.nuexpsum  1.phi  1.roc  1.w0  1.w1  1.ydist  11.nu  11.nuexpprod  11.nuexpsum  11.param  11.phi  11.roc  11.w0  11.w1  11.ydist  final.nu  final.nuexpprod  final.nuexpsum  final.other  final.param  final.roc  final.w0  final.w1  final.ydist
Settings/: Kinship.txt  Nipsc0.txt  Nipsc1.txt  Nipsc2.txt  Wiki.txt
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/LinkSVM/: .LinkSVM.cpp.swp  .LinkSVMDiag.cpp.swp  BayesLinkSVM.cpp  BayesLinkSVM.h  BayesLinkSVMSym.cpp  BayesLinkSVMSym.h  CMakeLists.txt  LinkSVM.cpp  LinkSVM.h  LinkSVMDiag.cpp  LinkSVMDiag.h  LinkSVMSym.cpp  LinkSVMSym.h  Makefile  cmake_install.cmake
src/SVMLight/: CMakeLists.txt  Makefile  cmake_install.cmake  svm_common.cpp  svm_hideo.cpp  svm_learn.cpp
src/SVM_Multiclass/: CMakeLists.txt  Makefile  cmake_install.cmake  svm_struct_api.cpp  svm_struct_common.h  svm_struct_learn.cpp  svm_struct_learn.h
src/utils/: CMakeLists.txt  Corpus.cpp  Corpus.h  Makefile  NormalGammaPrior.cpp  NormalGammaPrior.h  Params.cpp  Params.h  WeightVector.cc  cmake_install.cmake  cokus.cpp  simple_sparse_vec_hash.cc  simple_sparse_vec_hash.h  utils.cpp  utils.h
